--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -144,12 +144,12 @@
         <div class="col-md-3 text-left col-md-offset-1">
           <h3>${_('Other Downloads')}</h3>
           <p><a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('64-bit %sGB Live image')) % global_variables.iso_size['x86_64_workstation']}</a></p>
-          <p><a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i386_workstation']}</a></p>
+          <p><a class="ws-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i386_workstation']}</a></p>
           <p>
           ${_('Netinstall Images:')}
           <ul>
           <li><p><a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('64-bit %sMB image')) % global_variables.iso_size['x86_64_workstation_net']}</a></p></li>
-          <li><p><a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sMB image')) % global_variables.iso_size['i386_workstation_net']}</a></p></li>
+          <li><p><a class="ws-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sMB image')) % global_variables.iso_size['i386_workstation_net']}</a></p></li>
           </ul>
           </p>
           <div class="top-space bottom-margin">
