--- a/labs.fedoraproject.org/data/content/design-suite/download/index.html
+++ b/labs.fedoraproject.org/data/content/design-suite/download/index.html
@@ -40,7 +40,7 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-                  <p><a class="design-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Design_suite-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Design']}</a></p>
+                  <p><a class="design-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Design_suite-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Design']}</a></p>
                   <!--<p><a href="https://dl.fedoraproject.org/pub/alt/stage/25_RC-1.3/Labs/i386/iso/Fedora-Design_suite-Live-i386-25-1.3.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Design']}</a></p> -->
               </li>
           </ul>
