--- a/arm.fedoraproject.org/data/content/prerelease.html
+++ b/arm.fedoraproject.org/data/content/prerelease.html
@@ -92,7 +92,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/armhfp/images/Fedora-Workstation-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
-         <div class="col-xs-12 white">
+<!--         <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/kde.png" alt="KDE Plasma" />
             </div>
@@ -110,6 +110,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-KDE-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
+-->
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/xfce.png" alt="Xfce" />
@@ -128,7 +129,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-Xfce-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
-         <div class="col-xs-12 white">
+<!--         <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/lxde.png" alt="LXDE" />
             </div>
@@ -146,6 +147,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXDE-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
+-->
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/lxqt.png" alt="LXQt" />
@@ -164,7 +166,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
-         <div class="col-xs-12 white">
+<!--         <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/mate.png" alt="MATE-Compiz" />
             </div>
@@ -182,6 +184,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-Mate-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
+-->
 <!--         <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/cinnamon.png" alt="Cinnamon" />
