--- a/getfedora.org/data/content/atomic/prerelease/index.html
+++ b/getfedora.org/data/content/atomic/prerelease/index.html
@@ -223,14 +223,14 @@
 	              <div class="col-xs-12">
 	                <h5 class="bold">${_('VirtualBox Image')}</h5>
 	                <p>${_('If you\'re using Vagrant on Mac OS X or Windows, this is likely the image you\'ll want to use.')}</p>
-	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['manual_pre_atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
 	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['pre_atomic_VBvag_cloud']}</p>
 	              </div>
 	              <div class="col-xs-12">
 	                <h5 class="bold">${_('libvirt/KVM Image')}</h5>
 	                <p>${_('If you\'re using Vagrant on Fedora, this is the image you\'ll want to use.')}</p>
-	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
-	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['pre_atomic_libvag_cloud']}</p>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['manual_pre_atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
+	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['manual_pre_atomic_libvag_cloud']}</p>
 	              </div>
 	            </div>
 
@@ -247,12 +247,12 @@
 	            </div>
 	            <div class="row hidden-xs">
 	              <div class="col-sm-6">
-	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
-	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['pre_atomic_VBvag_cloud']}</p>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['manual_pre_atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
+	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['manual_pre_atomic_VBvag_cloud']}</p>
 	              </div>
 	              <div class="col-sm-6">
-	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
-	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['pre_atomic_libvag_cloud']}</p>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['manual_pre_atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
+	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['manual_pre_atomic_libvag_cloud']}</p>
 	              </div>
 	            </div>
 	          </div>
@@ -292,14 +292,14 @@
 		          <div class="col-xs-12">
 		            <h5 class="bold">${_('qcow2 Image')}</h5>
 		            <p>${Markup(_('This is Fedora %(rel)s %(state)s Cloud Atomic Host in a Qcow2-formatted image for use with OpenStack.')) % {'rel':global_variables.release['next_atomic_id'], 'state':global_variables.release['curr_atomic_state']}}</p>
-		            <a class="btn btn-success download-cloud" href="${global_variables.release['atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
-		              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['pre_atomic_qcow2_cloud']}</p>
+		            <a class="btn btn-success download-cloud" href="${global_variables.release['manual_pre_atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
+		              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['manual_pre_atomic_qcow2_cloud']}</p>
 		          </div>
 		          <div class="col-xs-12">
 		            <h5 class="bold">${_('Raw Image')}</h5>
 		            <p>${Markup(_('This is Fedora %(rel)s %(state)s Cloud Atomic Host in a compressed raw image format. If you\'re not sure what to use, try this.')) % {'rel':global_variables.release['next_atomic_id'], 'state':global_variables.release['curr_atomic_state']}}</p>
-		            <a class="btn btn-success download-cloud" href="${global_variables.release['atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
-		              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['pre_atomic_raw_cloud']}</p>
+		            <a class="btn btn-success download-cloud" href="${global_variables.release['manual_pre_atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
+		              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['manual_pre_atomic_raw_cloud']}</p>
 		          </div>
 		      </div>
 		      <!-- Desktop -->
@@ -315,12 +315,12 @@
 		      </div>
 		      <div class="row hidden-xs">
 		          <div class="col-sm-6">
-		            <a class="btn btn-success download-cloud" href="${global_variables.release['atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
-		              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['pre_atomic_qcow2_cloud']}</p>
+		            <a class="btn btn-success download-cloud" href="${global_variables.release['manual_pre_atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
+		              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['manual_pre_atomic_qcow2_cloud']}</p>
 		          </div>
 		          <div class="col-sm-6">
-		            <a class="btn btn-success download-cloud" href="${global_variables.release['atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
-		              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['pre_atomic_raw_cloud']}</p>
+		            <a class="btn btn-success download-cloud" href="${global_variables.release['manual_pre_atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
+		              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['manual_pre_atomic_raw_cloud']}</p>
 		          </div>
 		      </div>
       <!-- end Base images -->
@@ -332,7 +332,7 @@
     <div class="col-md-3 col-xs-12 col-md-offset-1 top-margin">
         <h3>${_('Other Downloads')}</h3>
           <ul>
-            <li><p><a class="download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/Atomic/x86_64/iso/Fedora-Atomic-ostree-x86_64-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}.iso">${_('Atomic Host ISO image (%sMB)') % global_variables.iso_size['pre_atomic_iso']}</a></p></li>
+            <li><p><a class="download-cloud-splash" href="${global_variables.release['manual_pre_atomic_iso_url']}">${_('Atomic Host ISO image (%sMB)') % global_variables.iso_size['manual_pre_atomic_iso']}</a></p></li>
             <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Docker/x86_64/images/Fedora-Docker-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.tar.xz">${_('Docker Image (%sMB)') % global_variables.iso_size['pre_x86_64_docker']}</a></p></li>
             <li><p><a href="https://cloud.fedoraproject.org/">Fedora Cloud Base images</a></p></li>
           </ul>
