atomic: update prerelease page with AMI information

--- a/getfedora.org/data/content/atomic/prerelease/index.html
+++ b/getfedora.org/data/content/atomic/prerelease/index.html
@@ -88,9 +88,9 @@
                     </thead>
                     <tbody>
                       <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI" class="hidden-xs">${global_variables.GP2_HVM_atomic_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.GP2_HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                        <td py:if="r.code in global_variables.pre_GP2_HVM_atomic_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.pre_GP2_HVM_atomic_AMI" class="hidden-xs">${global_variables.pre_GP2_HVM_atomic_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.pre_GP2_HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.pre_GP2_HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -120,9 +120,9 @@
                     </thead>
                     <tbody>
                       <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI" class="hidden-xs">${global_variables.HVM_atomic_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                        <td py:if="r.code in global_variables.pre_HVM_atomic_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.pre_HVM_atomic_AMI" class="hidden-xs">${global_variables.pre_HVM_atomic_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.pre_HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.pre_HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -164,9 +164,9 @@
                     </thead>
                     <tbody>
                       <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI" class="hidden-xs">${global_variables.GP2_HVM_atomic_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.GP2_HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                        <td py:if="r.code in global_variables.pre_GP2_HVM_atomic_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.pre_GP2_HVM_atomic_AMI" class="hidden-xs">${global_variables.pre_GP2_HVM_atomic_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.pre_GP2_HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.pre_GP2_HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -194,9 +194,9 @@
                     </thead>
                     <tbody>
                       <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI" class="hidden-xs">${global_variables.HVM_atomic_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                        <td py:if="r.code in global_variables.pre_HVM_atomic_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.pre_HVM_atomic_AMI" class="hidden-xs">${global_variables.pre_HVM_atomic_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.pre_HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.pre_HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
