--- a/getfedora.org/data/content/atomic/download/index.html
+++ b/getfedora.org/data/content/atomic/download/index.html
@@ -343,23 +343,13 @@
           <div class="pull-right bottom-margin"><p>${Markup(_('Join the Project Atomic channel &lt;strong&gt;#atomic&lt;/strong&gt;&lt;/a&gt; on &lt;strong&gt;irc.freenode.org&lt;/strong&gt;&lt;/a&gt;.'))}</p></div>
           <div class="top-space bottom-margin">
             <py:choose>
-            <py:when test="global_variables.release['curr_atomic_state'] == 'Alpha'">
+            <py:when test="global_variables.release['curr_atomic_state'] == 'Pre-Release'">
               <div class="prerelease-box">
-                <h5>${Markup(_('F%(rel)s Alpha')) % {'rel':global_variables.release['next_atomic_id']}}</h5>
+                <h5>${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_atomic_id'], 'state':global_variables.release['curr_atomic_state']}}</h5>
                 <h4>${_('Try a pre-release')}</h4>
                 <p>${_('We\'re working on our next release.')}<br />
                     ${Markup(_('Help us get F%(rel)s ready!')) % {'rel':global_variables.release['next_atomic_id']}}</p>
-                <p><i class="fa fa-fw fa-sm header-icon fa-download"></i><a href="../prerelease">${Markup(_('Download F%(rel)s Alpha images')) % {'rel':global_variables.release['next_atomic_id']}}</a></p>
-                <p><i class="fa fa-fw fa-sm header-icon fa-book"></i><a href="//fedoraproject.org/wiki/QA/Join#release-validation">${_('How to test pre-releases')}</a></p>
-              </div>
-            </py:when>
-            <py:when test="global_variables.release['curr_atomic_state'] == 'Beta'">
-              <div class="prerelease-box">
-                <h5>${Markup(_('F%(rel)s Beta')) % {'rel':global_variables.release['next_atomic_id']}}</h5>
-                <h4>${_('Try a pre-release')}</h4>
-                <p>${_('We\'re working on our next release.')}<br />
-                    ${Markup(_('Help us get F%(rel)s ready!')) % {'rel':global_variables.release['next_atomic_id']}}</p>
-                <p><i class="fa fa-fw fa-sm header-icon fa-download"></i><a href="../prerelease">${Markup(_('Download F%(rel)s Beta images')) % {'rel':global_variables.release['next_atomic_id']}}</a></p>
+                <p><i class="fa fa-fw fa-sm header-icon fa-download"></i><a href="../prerelease">${Markup(_('Download F%(rel)s %(state)s images')) % {'rel':global_variables.release['next_atomic_id'], 'state':global_variables.release['curr_atomic_state']}}</a></p>
                 <p><i class="fa fa-fw fa-sm header-icon fa-book"></i><a href="//fedoraproject.org/wiki/QA/Join#release-validation">${_('How to test pre-releases')}</a></p>
               </div>
             </py:when>
