--- a/getfedora.org/data/content/atomic/prerelease/index.html
+++ b/getfedora.org/data/content/atomic/prerelease/index.html
@@ -34,7 +34,7 @@
           <h2>${Markup(_('Download Fedora %(rel)s %(state)s Atomic Host')) % {'rel':global_variables.release['next_atomic_id'], 'state':global_variables.release['curr_atomic_state']}}</h2>
             <p>${_('Atomic Host is built every 2 weeks or so.')}</p>
             <p py:if="not global_variables.release['atomic_freshness']">${Markup(_('The latest two week build did not meet our testing criteria. The images available are from over %(atomic_age)s days ago. Check the Project Atomic blog for updates and information about Atomic blocker bugs.') % global_variables.release)}</p>
-            <p py:if="global_variables.release['atomic_freshness']">${Markup(_('These are the latest official Fedora Atomic Host images, produced %(atomic_age)s days ago.') % global_variables.release)}</p>
+            <p py:if="global_variables.release['atomic_freshness']">${Markup(_('These are the latest Fedora Atomic Host images, produced on %(manual_pre_atomic_date)s.') % global_variables.release)}</p>
         </div>
       </div>
     </div>
@@ -47,12 +47,6 @@
           <div class="col-xs-12">
           <p class="warning">${Markup(_('This is pre-release software and is supported by the &lt;a href="%(team_url)s"&gt;Cloud Working Group&lt;/a&gt;. Please direct questions to their &lt;a href="%(team_list)s"&gt;mailing list&lt;/a&gt; or %(team_irc)s on freenode.') % {'team_url':'http://fedoraproject.org/wiki/Cloud', 'team_list':'https://lists.fedoraproject.org/mailman/listinfo/cloud', 'team_irc':'#fedora-cloud'})}
           ${Markup(_('All issues or bugs should be reported via the &lt;a href="%s"&gt;Red Hat Bugzilla&lt;/a&gt;. The Fedora Project makes no guarantees as to its suitability or usefulness.') % 'https://bugzilla.redhat.com/')}
-          <py:choose>
-            <py:when test="global_variables.release['curr_state'] == 'Alpha'">${Markup(_('Read the &lt;a href="%(relnotes_url)s"&gt;Release Notes&lt;/a&gt; for more information on changes and new features, and the &lt;a href="%(commonbugs_url)s"&gt;Common Bugs&lt;/a&gt; page for information on commonly-encountered bugs and how to avoid them.') % {'relnotes_url':'https://fedoraproject.org/wiki/Fedora_%s_Alpha_release_notes' % global_variables.release['next_atomic_id'], 'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['next_atomic_id'])})}
-            </py:when>
-            <py:when test="global_variables.release['curr_state'] == 'Beta'">${Markup(_('Read the &lt;a href="%(relnotes_url)s"&gt;Release Notes&lt;/a&gt; for more information on changes and new features, and the &lt;a href="%(commonbugs_url)s"&gt;Common Bugs&lt;/a&gt; page for information on commonly-encountered bugs and how to avoid them.') % {'relnotes_url':'https://fedoraproject.org/wiki/F%s_Beta_release_announcement' % global_variables.release['next_atomic_id'], 'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['next_atomic_id'])})}
-            </py:when>
-          </py:choose>
         </p>
           </div>
       </div>
