drop PPC and s390x images which are not available

--- a/alt.fedoraproject.org/data/content/verify-prereleases.html
+++ b/alt.fedoraproject.org/data/content/verify-prereleases.html
@@ -72,9 +72,10 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
-            <div class="h-body text-center">
+<!--            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
             </div>
+-->
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem">
             <div class="productitem-logo">
@@ -90,17 +91,19 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64 iso')}</a>
             </div>
-            <div class="h-body text-center">
+<!--            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64 images')}</a>
             </div>
+-->
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le iso')}</a>
             </div>
-            <div class="h-body text-center">
+<!--            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le images')}</a>
             </div>
+-->
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('For Cloud Base images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('For Cloud Base images')}</a>
             </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem cloud">
@@ -111,12 +114,13 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
-            <div class="h-body text-center">
+<!--            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64')}</a>
             </div>
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
+-->
         </div>
     </div>
 
