--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -354,7 +354,7 @@
                   <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/ppc64/iso/Fedora-Cloud-netinst-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
-                <h3 class="panel-title accordion-title hidden-xs">
+<!--                <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud qcow2')}
                   <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
@@ -386,6 +386,7 @@
                   ${_('Docker')}
                   <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
+-->
               </div>
             </div>
           </div>
@@ -439,7 +440,7 @@
                   <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/ppc64le/iso/Fedora-Cloud-netinst-ppc64le-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
-                <h3 class="panel-title accordion-title hidden-xs">
+<!--                <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud qcow2')}
                   <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64le']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
@@ -471,10 +472,11 @@
                   ${_('Docker')}
                   <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Docker/ppc64le/images/Fedora-Docker-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64le']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
+-->
               </div>
             </div>
           </div>
-          <div class="panel panel-default">
+<!--          <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title hidden-xs">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
@@ -504,6 +506,7 @@
               </div>
             </div>
           </div>
+-->
         </div>
         </div>
       </div>
